# bmcp

./: .vdoc.py  basketball.qmd  basketball.quarto_ipynb  baskteball.txt  chapter1.html  chapter1.qmd  chapter1.quarto_ipynb  chapter2.html  chapter2.qmd  hello.py  long.csv  pyproject.toml
