[project]
name = "bmcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arviz>=0.20.0",
    "bambi>=0.15.0",
    "ipykernel>=6.29.5",
    "ipython>=8.32.0",
    "matplotlib>=3.10.0",
    "nbformat>=5.10.4",
    "patsy>=1.0.1",
    "pymc>=5.20.1",
    "pyyaml>=6.0.2",
    "quarto>=0.1.0",
    "scipy>=1.15.2",
    "tensorflow-probability>=0.25.0",
    "tensorflow[and-cuda]>=2.18.0",
    "tf-keras>=2.18.0",
    "theano>=1.0.5",
]
